[package]
name = "rosie-rs"
version = "0.1.0"
authors = ["Luke Peterson <luke@infoplatter.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.103"
rosie-sys = { path = "../rosie-sys" } #GOAT, change this to pull from crates.io before submitting
once_cell = "1.8.0" # As soon as std::sync::SyncLazy is pushed to stable, we will migrate there and eliminate this dependency
serde = { version = "*", features = ["derive"] } #NOTE: serde & serde_json promoted to full-on dependencies because of load_expression_deps.  This bugs me.
serde_json = "*"

[dev-dependencies]
rand = "0.8.0"      # rand for the stress tests
rand_pcg = "0.3.1"
#serde = { version = "*", features = ["derive"] } #NOTE: serde & serde_json promoted to full-on dependencies because of load_expression_deps.  This bugs me.
#serde_json = "*"

[features]
link_shared_librosie = ["rosie-sys/link_shared_librosie"]
build_static_librosie = ["rosie-sys/build_static_librosie"]

