cargo-features = ["edition2021"]

[package]
name = "rosie"
version = "0.1.0"
edition = "2021"
authors = ["Luke Peterson <luke@infoplatter.com>"]
license = "MIT OR Apache-2.0"
description = "Interface for the Rosie Pattern Language, for efficient and maintainable text pattern matching and search"
repository = "https://github.com/luketpeterson/rosie-rs/"
readme = "README.md"
homepage = "https://rosie-lang.org/about/"
keywords = ["rosie", "pattern", "match", "matching", "FSA", "regex"]
categories = ["text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.103"
rosie-sys = { version = "0.1.0", git = "https://github.com/luketpeterson/rosie-sys" } #DONOTPUBLISH, change this to pull from crates.io before submitting, and update version
once_cell = "1.8.0" # As soon as std::sync::SyncLazy is pushed to stable, we will migrate there and eliminate this dependency
serde = { version = "1.0.125", features = ["derive"] } #NOTE: serde & serde_json promoted to full-on dependencies because of load_expression_deps.  This bugs me.
serde_json = "1.0.64"
linked-hash-map = "0.5.4" #For the LRU cache of compiled expressions

[dev-dependencies]
rand = "0.8.0"      # rand for the stress tests
rand_pcg = "0.3.1"
#serde = { version = "1.0.125", features = ["derive"] } #NOTE: serde & serde_json promoted to full-on dependencies because of load_expression_deps.  This bugs me.
#serde_json = "1.0.64"

[features]
link_shared_librosie = ["rosie-sys/link_shared_librosie"]
build_static_librosie = ["rosie-sys/build_static_librosie"]

